# CG-Final-Project

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  Template_PrakCG.cpp  Template_PrakCG.vcxproj  Template_PrakCG.vcxproj.filters  assets.cpp  assets.h  help.cpp  help.h  image.cpp  image.h  input.cpp  input.h  light.cpp  light.h  main.cpp  main.h  object.cpp  object.h  planet.cpp  planet.h  planetSimulation.cpp  planetSimulation.h  vector.cpp  vector.h  wavefront.cpp  wavefront.h  window.cpp  window.h
Include/: gl.h  lib.h  tiny_obj_loader.h
Include/mapbox/: earcut.hpp
Scene/SolarSystem/: Earth.mtl  uploads_files_1907003_Earth.fbx  uploads_files_1907003_Jupiter.fbx  uploads_files_1907003_Mars.fbx  uploads_files_1907003_Mercury.fbx  uploads_files_1907003_Moon.fbx  uploads_files_1907003_Neptune.fbx  uploads_files_1907003_Saturn.fbx  uploads_files_1907003_Sun.fbx  uploads_files_1907003_Uranüs.fbx  uploads_files_1907003_Venus.fbx
assets/materials/: House.mtl  building.mtl  car.mtl  ground.mtl  house.mtl  skybox.mtl  tree.mtl
src/: assets.cpp  assets.h  camera.cpp  camera.h  car.cpp  car.h  help.cpp  help.h  input.cpp  input.h  light.cpp  light.h  main.cpp  menu.cpp  menu.h  object.cpp  object.h  texture.cpp  texture.h  vector.cpp  vector.h  window.cpp  window.h
